# matf-rg-project-2024-VukVukmirovic

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  DOC.md  Doxyfile  README-TEMPLATE.md  README.md  clion-code-style.xml  config.json  imgui.ini  intellij-style.xml  main.cpp  setup.sh
app/: CMakeLists.txt
app/include/: MyApp.hpp
app/src/: Main.cpp
engine/: App.cpp  App.hpp  CMakeLists.txt  DOC.md
engine/include/: engine_key_to_string.include  glfw_key_mapping.include  skybox_vertices.include
engine/include/engine/: App.hpp  Declarations.hpp  Engine.hpp
engine/include/engine/controller/: Controller.hpp  ControllerManager.hpp  EngineSentinelController.hpp
engine/include/engine/core/: App.hpp  Camera.hpp  Controller.hpp  Engine.hpp
engine/include/engine/graphics/: Camera.hpp  GraphicsController.hpp  OpenGL.hpp
engine/include/engine/platform/: Input.hpp  OpenGL.hpp  Platform.hpp  PlatformController.hpp  PlatformEventObserver.hpp  Window.hpp
engine/include/engine/render/: AssetsController.hpp  Mesh.hpp  Model.hpp  ShaderController.hpp
engine/include/engine/resources/: Mesh.hpp  Model.hpp  Resources.hpp  ResourcesController.hpp  Shader.hpp  ShaderCompiler.hpp  ShaderController.hpp  Skybox.hpp  Texture.hpp
engine/include/engine/util/: ArgParser.hpp  Configuration.hpp  Errors.hpp  Utils.hpp
engine/include/rg/: Declarations.hpp  Engine.hpp
engine/include/rg/controller/: Controller.hpp  ControllerManager.hpp  EngineSentinelController.hpp
engine/include/rg/core/: App.hpp  Engine.hpp
engine/include/rg/graphics/: Camera.hpp  GraphicsController.hpp  OpenGL.hpp
engine/include/rg/platform/: Input.hpp  OpenGL.hpp  Platform.hpp  PlatformController.hpp  PlatformEventObserver.hpp  Window.hpp
engine/include/rg/resources/: Mesh.hpp  Model.hpp  Resources.hpp  ResourcesController.hpp  Shader.hpp  ShaderCompiler.hpp  Skybox.hpp  Texture.hpp
engine/include/rg/util/: ArgParser.hpp  Configuration.hpp  Errors.hpp  Utils.hpp
engine/src/: App.cpp  AssetsController.cpp  Camera.cpp  ControllerManager.cpp  Errors.cpp  Graphics.cpp  GraphicsController.cpp  Mesh.cpp  Model.cpp  OpenGL.cpp  Platform.cpp  PlatformController.cpp  Render.cpp  Resources.cpp  ResourcesController.cpp  Shader.cpp  ShaderCompiler.cpp  ShaderController.cpp  Skybox.cpp  Texture.cpp  Utils.cpp
engine/test/app/: CMakeLists.txt  TUTORIAL.md  config.json
engine/test/app/include/app/: GUIController.hpp  MainApp.hpp  MainController.hpp  TestApp.hpp
engine/test/app/src/: GUIController.cpp  MainApp.cpp  MainController.cpp  TestApp.cpp
include/: AppStateController.hpp  OpenGLRenderer.hpp  PlatformEventObserverImpl.hpp
include/app/: GUIController.hpp  MainApp.hpp  MainController.hpp
libs/glad/: CMakeLists.txt  glad.cpp
libs/glad/include/glad/: glad.h
libs/imgui/: CMakeLists.txt
libs/json/: CMakeLists.txt
libs/stb/: CMakeLists.txt  stb.cpp
resources/shaders/: basic.glsl  default.glsl  skybox.glsl  uniform_color.glsl
resources/shaders/glsl/: basic.glsl
rg-engine/: CMakeLists.txt
rg-engine/include/: declarations.hpp  glfw_key_mapping.h
rg-engine/include/engine/: App.hpp  Core.hpp  Engine.hpp  Utils.hpp  app.hpp  core.hpp  engine.h  engine.hpp  errors.hpp  platform.hpp  utils.hpp
rg-engine/include/engine/controller/: Controller.hpp  ControllerManager.hpp
rg-engine/include/engine/ecs/: Component.hpp  Entity.hpp  EntityController.hpp
rg-engine/include/engine/platform/: Platform.hpp
rg-engine/include/engine/render/: AssetsController.hpp  Camera.hpp  DrawableElement.hpp  Mesh.hpp  Model.hpp  Shader.hpp  ShaderController.hpp  Texture.hpp
rg-engine/include/engine/renderer/: Shader.hpp
rg-engine/include/engine/util/: Errors.hpp  Utils.hpp
rg-engine/resources/shaders/glsl/: default.shader  uniform_color.shader
rg-engine/src/: App.cpp  AssetsController.cpp  Camera.cpp  ControllerManager.cpp  Core.cpp  ECS.cpp  EntityController.cpp  Errors.cpp  Impl_GLFW3_OpenGL.cpp  Platform_GLFW3_OpenGL.cpp  ShaderController.cpp  Shader_OpenGL.cpp  Utils.cpp  app.cpp  core.cpp  errors.cpp  platform_GLFW3.cpp  platform_glfw3_opengl.cpp  utils.cpp
rg/include/: declarations.hpp  glfw_key_mapping.h
rg/include/engine/: App.hpp  Engine.hpp
rg/include/engine/controller/: Controller.hpp  ControllerManager.hpp  EngineControllersSentinel.hpp
rg/include/engine/platform/: Platform.hpp
rg/include/engine/render/: AssetsController.hpp  Mesh.hpp  Model.hpp  Shader.hpp  ShaderController.hpp  Texture.hpp
rg/include/engine/util/: Errors.hpp  Utils.hpp
rg/src/: App.cpp  AssetsController.cpp  Camera.cpp  ControllerManager.cpp  Errors.cpp  Impl_GLFW3_OpenGL.cpp  Mesh.cpp  Model.cpp  Platform.cpp  Shader.cpp  ShaderController.cpp  Texture.cpp  Utils.cpp
src/: AppStateController.cpp  GUIController.cpp  MainApp.cpp  MainController.cpp  OpenGLRendererImpl.cpp  PlatformEventObserverImpl.cpp  main.cpp
